@@ -34,20 +34,20 @@
 
 input:not([type]), 
 input[type="color"],
-input[type="date"],
-input[type="datetime"],
-input[type="datetime-local"],
 input[type="email"],
-input[type="month"],
 input[type="number"],
 input[type="password"],
 input[type="tel"],
-input[type="text"],
 #if !defined(ENABLE_INPUT_MULTIPLE_FIELDS_UI) || !ENABLE_INPUT_MULTIPLE_FIELDS_UI
+input[type="date"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="month"],
 input[type="time"],
+input[type="week"],
 #endif
 input[type="url"],
-input[type="week"] {
+input[type="text"] {
     padding:1px 0;
 }
 
